force-app/main/default/objects/XactlyExpress__XCCustomizeView__c/XactlyExpress__XCCustomizeView__c.object-meta.xml
<CustomObject>
    <label>XCCustomizeView</label>
    <nameField>
        <label>XCCustomizeView Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>XCCustomizeView</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>