force-app/main/default/objects/XactlyExpress__XCCustomizeView__c/fields/XactlyExpress__customWidth__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__customWidth__c</fullName>
    <defaultValue>150</defaultValue>
    <label>customWidth</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>