force-app/main/default/objects/XactlyExpress__XCCustomizeView__c/fields/XactlyExpress__isDisplayed__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__isDisplayed__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isDisplayed</label>
    <type>Checkbox</type>
</CustomField>