force-app/main/default/objects/XactlyExpress__XCCustomizeView__c/fields/XactlyExpress__Order__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__Order__c</fullName>
    <label>Order</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>