force-app/main/default/objects/XactlyExpress__XCCustomizeView__c/fields/XactlyExpress__ViewId__c.field-meta.xml
<CustomField>
    <fullName>XactlyExpress__ViewId__c</fullName>
    <label>ViewId</label>
    <referenceTo>XactlyExpress__XCView__c</referenceTo>
    <relationshipLabel>CustomizeView</relationshipLabel>
    <relationshipName>CustomizeView</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>